[package]
name = "ink_editor"
version = "0.1.0"
authors = ["[Achim Schneider] <[achim.schneider@posteo.de]>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
dev = ["console_error_panic_hook"]
ink-as-dependency = []

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
instant = { version = "0.1", features = ["wasm-bindgen"] }
log = { version = "0.4.14", features = ["release_max_level_warn"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_repr = "0.1.6"
serde-wasm-bindgen = "0.1.3"
stacker = "0.1.13"
wasm-bindgen = "0.2.72"
wasm-bindgen-rayon = "1.0.2"

ide = { version = "0.0.44", package = "ra_ap_ide" }
ide_db = { version = "0.0.44", package = "ra_ap_ide_db" }

ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

# Should be removed once bitvecto-rs/bitvec#105 is resolved
funty = "=1.1.0"
